fix(index.html): Fix "stryker shirt image" max-width, so it doesn't break the design on mobile browsers.

--- a/stylesheets/stryker.css
+++ b/stylesheets/stryker.css
@@ -45,3 +45,8 @@ pre{
     padding: 0;
     text-align: left;
 }
+.stryker-shirt-image {
+    max-width: 100%;
+    width: auto;
+    height: auto;
+}
